Fix Project Card vertical gap

--- a/styles.css
+++ b/styles.css
@@ -812,9 +812,9 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 5rem;
     padding: 1.2rem;
-    margin-top: -2rem;
+    /* margin-top: rem; */
   }
   .project-items {
     display: flex;
